k8s-manifests/online-boutique/discount-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discount-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discount-service
  template:
    metadata:
      labels:
        app: discount-service
    spec:
      containers:
      - name: server
        # Tạm thời dùng image Nginx để test, lúc nào bạn build xong image Python thì thay vào đây
        image: nginx:alpine 
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: discount-service
spec:
  type: ClusterIP
  selector:
    app: discount-service
  ports:
  - name: http
    port: 8000
    targetPort: 8000
