k8s-manifests/online-boutique/loyalty-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty-service
  template:
    metadata:
      labels:
        app: loyalty-service
    spec:
      containers:
      - name: server
        image: loyalty-service:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: loyalty-service
spec:
  type: ClusterIP
  selector:
    app: loyalty-service
  ports:
  - name: http
    port: 8080
    targetPort: 8080
